--- a/index.html
+++ b/index.html
@@ -31,5 +31,9 @@
 
   <p>Le lontre hanno ghiandole anali ben sviluppate. Marcano i confini del loro territorio e quindi probabilmente «comunicano» così la volontà e la possibilità di accoppiarsi (estro). Mentre i maschi di solito vivono solitari, le femmine spesso formano un gruppo familiare con i loro piccoli fino alla gravidanza successiva. L'accoppiamento avviene solitamente alla fine dell'inverno o all'inizio della primavera e i piccoli, da uno a cinque, nascono tra aprile e maggio. I piccoli pesano circa 130 grammi alla nascita e aprono gli occhi dopo circa un mese. Iniziano le lezioni di nuoto quando hanno circa due mesi. Lasciano la madre quando hanno circa un anno e raggiungono la maturità sessuale quando hanno due o tre anni.</p>
 
+  <h2>Pagina condivisa</h2>
+  <p>Risorsa condivisa salvata localmente:</p>
+  <iframe src="assets/shared_page.html" title="Pagina condivisa" style="width:100%;height:640px;border:1px solid #ddd;"></iframe>
+
 </body>
 </html>
