--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <h2>Pagina condivisa</h2>
   <p>Risorsa condivisa salvata localmente:</p>
-  <iframe src="assets/shared_page.html" title="Pagina condivisa" style="width:100%;height:640px;border:1px solid #ddd;"></iframe>
+  <iframe src="assets/shared_page.html" title="Pagina condivisa" style="width:100%;height:640px;border:2px solid #0b3b57;border-radius:4px;"></iframe>
 
 </body>
 </html>
